--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -5,7 +5,8 @@ on:
     - cron: '30 10 * * 2'
     - cron: '30 10 * * 3'
 jobs:
-  prepare-parameters:
+  schedule-validate-backups:
+    if: github.event.schedule == ${{ matrix.CronSchedule }}
     runs-on: ubuntu-latest
     strategy:
         matrix:
@@ -13,8 +14,6 @@ jobs:
             - TargetEnvironment: delius-core-dev
             - TargetHost: delius_primarydb
             - CronSchedule: '30 10 * * 2'
-  run-workflow-call:
-    if: github.event.schedule == ${{ matrix.CronSchedule }}
     uses:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
     with:
