--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
         RunNow: ${{ steps.schedule-run.outputs.RunNow }}
+        TargetEnvironment: ${{ steps.schedule-run.outputs.TargetEnvironment }}
+        TargetHost: ${{ steps.schedule-run.TargetHost }}
     strategy:
         matrix:
           include:
@@ -24,12 +26,14 @@ jobs:
         run: |
          # [ "${{ github.event.schedule }}" == "${{ matrix.CronSchedule }}" ] && echo "RunNow=true" || echo "RunNow=false" >> $GITHUB_OUTPUT
          echo "RunNow=true" >> $GITHUB_OUTPUT
-         
+         echo "TargetEnvironment=${{ matrix.TargetEnvironment }}"
+         echo "TargetHost=${{ matrix.TargetHost }}"
+
   run-workflow-call:
     needs: check_if_scheduled
     if: needs.check_if_scheduled.outputs.RunNow == 'true'
     uses:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-validate-backups.yml@main
     with:
-      TargetEnvironment: ${{ matrix.TargetEnvironment }}
-      TargetHost: ${{ matrix.TargetHost }}
+      TargetEnvironment: ${{ needs.check_if_scheduled.outputs.TargetEnvironment }}
+      TargetHost: ${{ needs.check_if_scheduled.outputs.TargetHost }}
