--- a/.github/workflows/oracle-db-schedule-delius-dev-validate-backup.yml
+++ b/.github/workflows/oracle-db-schedule-delius-dev-validate-backup.yml
@@ -20,8 +20,9 @@ jobs:
   run-workflow-call:
     needs: prepare-parameters
     uses:
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-validate-backups.yml@main
+      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
     with:
       TargetEnvironment: delius-core-dev
       TargetHost: delius_primarydb
+      Period: ${{ needs.prepare-parameters.outputs.Period }}
     secrets: inherit
