--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -1,8 +1,6 @@
 name: "Oracle: Schedule Validate Backups"
 on:
-  push:
-    branches:
-       - "DBA-662"
+  workflow_dispatch:
   schedule:
     - cron: '30 10 * * 1'
     - cron: '20 11 * * TUE'
