--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -64,7 +64,7 @@ on:
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook operations/playbooks/oracle_backup/validate_backup.yml
+  command: ansible-playbook operations/playbooks/oracle_backup/validate_backup.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image respectively 
