--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -18,11 +18,11 @@ jobs:
         uses: JoshuaTheMiller/conditional-build-matrix@main
         with:
           inputFile: '.github/workflows/oracle-db-validate-backups-schedule.json'
-          filter: '[?CronSchedule!=`${{ github.event.schedule }}`]'
+          filter: '[?CronSchedule==`${{ github.event.schedule }}`]'
 
   validate:
     needs: prepare-run-matrix
-    if: ${{ fromJson(needs.matrix_prep.outputs.matrix) != '[]' }}
+    # if: ${{ fromJson(needs.matrix_prep.outputs.matrix) != '[]' }}
     strategy:
       matrix: ${{ fromJson(needs.matrix_prep.outputs.matrix) }}
     name: Validate
