--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -26,9 +26,18 @@ jobs:
     steps:
       - name: Show Matrix
         run: |
+            echo "${{ needs.prepare-run-matrix.outputs.matrix }} == '{include:[]}'"
             echo "${{ needs.prepare-run-matrix.outputs.matrix }}"
             echo "${{ fromJson(needs.prepare-run-matrix.outputs.matrix)}}"
             echo "${{ fromJson(needs.prepare-run-matrix.outputs.matrix) != '[]' }}"
+      - name: Is Empty
+        if: needs.prepare-run-matrix.outputs.matrix == '{"include":[]}'
+        run: |
+             echo "Is Empty"
+      - name: Is Full
+        if: needs.prepare-run-matrix.outputs.matrix != '{"include":[]}'
+        run: |
+             echo "Is Full"
 
   validate:
     needs: prepare-run-matrix
