--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -18,7 +18,7 @@ jobs:
         uses: JoshuaTheMiller/conditional-build-matrix@main
         with:
           inputFile: '.github/workflows/oracle-db-validate-backups-schedule.json'
-          filter: '[?CronSchedule==`${{ github.event.schedule }}`]'
+          filter: '[?CronSchedule!=`${{ github.event.schedule }}`]'
 
   report:
     runs-on: ubuntu-latest
