--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -18,7 +18,7 @@ jobs:
         uses: JoshuaTheMiller/conditional-build-matrix@8ef1aa49326ac801f8c5979033ed8cf815d6ef92 # v.0.38.0
         with:
           inputFile: '.github/workflows/oracle-db-validate-backups-schedule.json'
-          filter: '[?CronSchedule==`${{ github.event.schedule }}`]'
+          filter: '[?CronSchedule!=`${{ github.event.schedule }}`]'
 
   validate-backup:
     needs: prepare-run-matrix
