--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Report Backup Schedule
         id: report-backup-schedule
         run: |
-             cat operations/oracle-db-validate-backups-schedule.json
+             find . 
