--- a/.github/workflows/oracle-db-schedule-validate-backups copy.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups copy.yml
@@ -22,6 +22,7 @@ jobs:
 
   report:
     needs: prepare-run-matrix
+    runs-on: ubuntu-latest
     steps:
       - name: Show JSON
         id: show-json
