--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -27,4 +27,6 @@ jobs:
       - name: Report Backup Schedule
         id: report-backup-schedule
         run: |
-             cat operations/.github/workflows/oracle-db-validate-backups-schedule.json
+             # cat operations/.github/workflows/oracle-db-validate-backups-schedule.json
+             SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","TargetHost"}]' oracle-db-validate-backups-schedule.json | jq '{include: .}')
+             echo ${SCHEDULED_JSON}
